k8s/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: node-logger
  namespace: capstone

spec:
  selector:
    matchLabels:
      app: node-logger

  template:
    metadata:
      labels:
        app: node-logger

    spec:
      containers:
        - name: logger

          image: busybox:1.36

          command:
            - sh
            - -c
            - |
              while true
              do
                echo "Node: $(hostname)"
                date
                sleep 30
              done
