k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: starter-app
  namespace: capstone

spec:
  replicas: 2

  selector:
    matchLabels:
      app: starter-app

  template:
    metadata:
      labels:
        app: starter-app

    spec:
      containers:
      - name: starter-app

        image: starter-app:1.0.0

        imagePullPolicy: Never

        ports:
        - containerPort: 8080
