k8s/redis-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis
  namespace: capstone

spec:
  clusterIP: None

  selector:
    app: redis

  ports:
    - port: 6379
      targetPort: 6379
